# Ctrl-VIO

./: CMakeLists.txt  README.md  package.xml
config/: ct_odometry_tumrs.yaml
config/rviz/: ctrlvio.rviz
config/tumrs/: cam_tumrs.yaml  imu_tumrs.yaml
launch/: odometry.launch
src/app/: odometry_node.cpp
src/estimator/: odometry_manager.cpp  odometry_manager.h  odometry_viewer.h  parameter_manager.h  trajectory_estimator.cpp  trajectory_estimator.h  trajectory_estimator_options.h  trajectory_manager.cpp  trajectory_manager.h
src/estimator/factor/: ceres_local_param.h
src/estimator/factor/analytic_diff/: image_feature_factor.h  marginalization_factor.cpp  marginalization_factor.h  rd_spline_view.h  so3_spline_view.h  split_spline_view.h  trajectory_value_factor.h
src/inertial/: inertial_initializer.cpp  inertial_initializer.h
src/spline/: assert.h  ceres_spline_helper.h  ceres_spline_helper_jet.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_common.h  spline_segment.h  trajectory.cpp  trajectory.h
src/utils/: ceres_callbacks.h  eigen_utils.hpp  math_utils.h  mypcl_cloud_type.h  opt_weight.h  parameter_struct.h  sophus_utils.hpp  tic_toc.h  yaml_utils.h
src/visual_odometry/: feature_manager.cpp  feature_manager.h  integration_base.h  parameters.cpp  parameters.h  utility.h  vio_initial.cpp  vio_initial.h  visual_odometry.cpp  visual_odometry.h  visual_struct.h
src/visual_odometry/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
src/visual_odometry/visual_feature/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  feature_tracker_node.h  parameters.cpp  parameters.h
